<?xml version="1.0"?>
<package>
  <name>alvar_bundle_generator</name>
  <version>1.0.1</version>
  <description>Generates bundle files from images for ar_track_alvar</description>

  <author email="srinjoy.majumdar@utexas.edu">Srinjoy Majumdar</author>
  <maintainer email="srinjoy.majumdar@utexas.edu">Srinjoy Majumdar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <!-- TODO: Add python packages to index so we can automatically install them -->
  <!-- <run_depend>python-pybrain</run_depend>
  <run_depend>python-pyquaternion</run_depend>
  <run_depend>python-numpy</run_depend> -->

  <export>
  </export>
</package>
